# dashscope_utils

./: .gitignore  README.md  pyproject.toml
examples/: async_chat.py  simple_test.py  test_dashscope_client.py
src/dashscope_utils/: __init__.py  manager.py  types.py
src/dashscope_utils/clients/: __init__.py  api.md  base.py  dashscope_client.py
src/dashscope_utils/utils/: __init__.py  dashscope_file_uploader.py  image_utils.py  media_utils.py  upload_helpers.py
