 [build-system]
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "dashscope-utils"
 version = "0.1.0"
 description = "Async-friendly LLM client wrapper for OpenAI and DashScope with simple rate limiting."
 authors = [{ name = "dashscope-utils" }]
 readme = "README.md"
 dependencies = [
   "dashscope==1.25.3",
   "pillow==11.3.0",
 ]

 [project.optional-dependencies]
 dev = ["pytest>=7.4", "anyio>=4.2"]

 [project.urls]
 repository = "https://example.com/dashscope-utils"

 [tool.setuptools]
 package-dir = {"" = "src"}

 [tool.setuptools.packages.find]
 where = ["src"]

